#7521 bug: fix to force long links to wrap and prevent horizontal scroll

--- a/src/components/RichText/_rich-text.scss
+++ b/src/components/RichText/_rich-text.scss
@@ -7,8 +7,12 @@
 // ----------------------------------
 
 .cc-rich-text {
+
+  // ensure extra long words are wrapped to prevent overlap or horizontal scroll
+  overflow-wrap: break-word;
   // ensure wide table data can be seen using horizontal scroll
   overflow-x: auto;
+  word-wrap: break-word;
 
   h2 {
     @extend %heading-base;
@@ -22,20 +26,20 @@
     @extend %heading-large;
     letter-spacing: 0;
   }
-  
+
   h4 {
     @extend %heading-base;
     @extend %heading-regular;
     letter-spacing: 0;
   }
-  
+
   h5,
   h6 {
     @extend %heading-base;
     @extend %heading-small;
     letter-spacing: 0;
   }
-  
+
   p {
     @extend %body-large;
   }
@@ -62,7 +66,7 @@
     padding: calc(0.25 * var(--space-unit)) 0 calc(0.25 * var(--space-unit)) calc(2 * var(--space-unit));
     text-align: left;
   }
-  
+
   tr {
     border: solid var(--colour-grey-10);
     border-width: 1px 0;
@@ -71,24 +75,24 @@
   thead tr {
     border-bottom-width: 2px;
   }
-  
+
   tbody tr:nth-child(odd) {
     background-color: var(--colour-cyan-05);
   }
-  
+
   th,
   td {
     padding: var(--space-md) var(--space-lg);
     text-align: left;
     vertical-align: top;
   }
-  
+
   th {
     font-size: var(--body-xxs);
     font-weight: 500;
     text-transform: uppercase;
   }
-  
+
   thead th {
     padding: calc(2.5 * var(--space-unit)) var(--space-lg);
   }
